--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="custom_dialog">Add Mini Bio</string>
     <string name="name">Write your bio here</string>
     <string name="submit">Submit</string>
+    <string name="landing_page_password">Already have an account ?</string>
 </resources>
