--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="landing_page_password">Already have an account?</string>
     <string name="price_per_seat_publish">Edit price per seat.</string>
     <string name="no_of_passenger_publish">So how many CarCool passengers can you take ?</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
